# OnlyOperatorsCollection

./: CMakeLists.txt
_kernel/collection_interfaces/: ICollection.h  IEnumerable.h  IEnumerator.h
dynamic_array/: DynamicArray.cpp  DynamicArray.h
vector/: Vector.cpp  Vector.h  main.cpp
